Finished module 8.4.2 and merged data frames.

--- a/Cleaning Data 1.ipynb
+++ b/Cleaning Data 1.ipynb
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7e5c58a1",
+   "id": "4b7bc1d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7099f9a3",
+   "id": "3480c8e4",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7efef799",
+   "id": "1e6f1a6d",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "343cc736",
+   "id": "0b5ff26b",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d53ce071",
+   "id": "fc5a3b64",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3ea67f7e",
+   "id": "aa951d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ad4f5fc5",
+   "id": "ec6ec9a7",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "58bd230d",
+   "id": "1dc9318b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b2d358c4",
+   "id": "a26f862a",
    "metadata": {
     "scrolled": true
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4bd42958",
+   "id": "2945c8db",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c64d15f9",
+   "id": "c2c2f206",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5b43ca40",
+   "id": "7ca04a32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1809,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4b4b4ada",
+   "id": "b2d8259d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "37278c57",
+   "id": "f0946112",
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7324aac2",
+   "id": "d46c7aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1945,7 +1945,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a7b38649",
+   "id": "d58be8c0",
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "15f41698",
+   "id": "b4000781",
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2257,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "56a1fe59",
+   "id": "cc9d1d86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2268,7 +2268,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5b65c9a9",
+   "id": "a0d65e2a",
    "metadata": {},
    "outputs": [
     {
@@ -2310,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "61a6fedf",
+   "id": "26eb09d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2320,7 +2320,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9f3f43bd",
+   "id": "85c20e04",
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e6db683b",
+   "id": "639c1249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2368,7 +2368,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "127a72e5",
+   "id": "ee865b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2379,7 +2379,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b5025746",
+   "id": "10ec86d9",
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2400,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3e2b50d6",
+   "id": "b8a7ca0b",
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "58d2fd0e",
+   "id": "496f5791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8431a615",
+   "id": "a7a72ca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2444,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "bd4da9cf",
+   "id": "7b3fbfcc",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "de1aa08d",
+   "id": "c5ce8c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2524,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "843cb893",
+   "id": "446310a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2534,7 +2534,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c11d2e5c",
+   "id": "a0357352",
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d9048525",
+   "id": "97762a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2693,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f4e8161b",
+   "id": "22eee549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2703,7 +2703,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9d6c005d",
+   "id": "1cb8088f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2713,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "917a1009",
+   "id": "8a9b2f64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2726,7 +2726,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5d2d1f9d",
+   "id": "008c7ae0",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "38a1ef66",
+   "id": "3602cc36",
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8371dbb1",
+   "id": "f45cd937",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2866,7 +2866,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "cdc768ba",
+   "id": "b120ef08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2876,7 +2876,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3cb9202b",
+   "id": "0c04bd87",
    "metadata": {},
    "outputs": [
     {
@@ -2989,7 +2989,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6bed0e31",
+   "id": "57e4e6da",
    "metadata": {},
    "outputs": [
     {
@@ -3024,7 +3024,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3e069a66",
+   "id": "c5e050ac",
    "metadata": {},
    "outputs": [
     {
@@ -3045,7 +3045,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "27e97024",
+   "id": "1b13085e",
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3077,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "78bf64f7",
+   "id": "795efc64",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c72f4d7f",
+   "id": "c83c97a0",
    "metadata": {},
    "outputs": [
     {
@@ -3136,7 +3136,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8492d221",
+   "id": "d8c31ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3147,7 +3147,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0dce922c",
+   "id": "90dc5307",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3158,7 +3158,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5f2bf1fb",
+   "id": "e1fad8b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3169,7 +3169,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fcb32e74",
+   "id": "ae97e3a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3180,7 +3180,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ee13b22d",
+   "id": "bd63a8d0",
    "metadata": {},
    "outputs": [
     {
@@ -3225,7 +3225,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d766fb02",
+   "id": "528406d6",
    "metadata": {},
    "outputs": [
     {
@@ -3251,7 +3251,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "327a2557",
+   "id": "11023092",
    "metadata": {},
    "outputs": [
     {
@@ -3427,7 +3427,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ef12112b",
+   "id": "cff2272f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3437,7 +3437,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9f091bbf",
+   "id": "a9f96d9e",
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3460,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9f49fdf4",
+   "id": "848d48a7",
    "metadata": {},
    "outputs": [
     {
@@ -3492,7 +3492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4ae03f73",
+   "id": "44a36d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3502,7 +3502,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "ef5470da",
+   "id": "0a2bced6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3514,7 +3514,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e6925585",
+   "id": "5d14f47d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3524,7 +3524,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "09d2412f",
+   "id": "37dbb6fb",
    "metadata": {},
    "outputs": [
     {
@@ -3560,7 +3560,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f67448c1",
+   "id": "ee5a6d0e",
    "metadata": {},
    "outputs": [
     {
@@ -3592,7 +3592,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f5e96541",
+   "id": "79cd18ad",
    "metadata": {},
    "outputs": [
     {
@@ -3635,7 +3635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "4c0788a7",
+   "id": "0e6fd34f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3645,7 +3645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7dfa601",
+   "id": "22c0b480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3664,7 +3664,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "0af66c01",
+   "id": "efa4a5ab",
    "metadata": {},
    "outputs": [
     {
@@ -3783,7 +3783,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "399d573c",
+   "id": "9914284c",
    "metadata": {},
    "outputs": [
     {
@@ -3915,7 +3915,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "882bae95",
+   "id": "3a16e52a",
    "metadata": {
     "scrolled": true
    },
@@ -3991,7 +3991,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "87e66ed5",
+   "id": "7f71fccc",
    "metadata": {
     "scrolled": true
    },
@@ -4026,7 +4026,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "004a6cd8",
+   "id": "d539c757",
    "metadata": {
     "scrolled": true
    },
@@ -4061,7 +4061,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1dbda1c7",
+   "id": "01b67b9e",
    "metadata": {
     "scrolled": true
    },
@@ -4096,7 +4096,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "bcdff1ec",
+   "id": "3d4b7b1c",
    "metadata": {},
    "outputs": [
     {
@@ -4129,7 +4129,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "955829bb",
+   "id": "e361f1f1",
    "metadata": {},
    "outputs": [
     {
@@ -4246,7 +4246,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "27d09557",
+   "id": "b35ea2ed",
    "metadata": {},
    "outputs": [
     {
@@ -4267,7 +4267,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "5e18a86c",
+   "id": "4f08538d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4277,7 +4277,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "fe0f4cbf",
+   "id": "128ef0f4",
    "metadata": {
     "scrolled": true
    },
@@ -4742,7 +4742,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "3af39f48",
+   "id": "1fff4b57",
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4795,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "4e045b2f",
+   "id": "00553267",
    "metadata": {},
    "outputs": [
     {
@@ -4827,7 +4827,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "65753a1f",
+   "id": "640d95db",
    "metadata": {
     "scrolled": true
    },
@@ -4868,7 +4868,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "dfb54db2",
+   "id": "d47c4e8d",
    "metadata": {
     "scrolled": true
    },
@@ -5001,7 +5001,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0165223e",
+   "id": "a68406b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5011,7 +5011,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "685fd0fc",
+   "id": "e63afbca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5025,7 +5025,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "36f5a71f",
+   "id": "ff22fb37",
    "metadata": {},
    "outputs": [
     {
@@ -5517,7 +5517,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "00e3044e",
+   "id": "0e28a63c",
    "metadata": {},
    "outputs": [
     {
@@ -5540,7 +5540,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b5d5c60e",
+   "id": "c11e22b6",
    "metadata": {},
    "outputs": [
     {
@@ -5562,7 +5562,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "aab014e0",
+   "id": "3f594712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5578,7 +5578,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f0ec2ff4",
+   "id": "5e4472d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5599,6 +5599,59 @@
     "                  'Composer(s)':'composers',\n",
     "                  'Based on':'based_on'\n",
     "                 }, axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "b62adea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "a599f5ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "c8d7a16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "51c5065a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "797b4e2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
    ]
   }
  ],
